[project]
name = "geo-sequencer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "tomli>=2.0.0",
    "tomli-w>=1.2.0",
]
